--- a/src/app/components/list-empleados/list-empleados.component.html
+++ b/src/app/components/list-empleados/list-empleados.component.html
@@ -15,7 +15,7 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <td>tomas</td>
+                    <td>pedro</td>
                     <td>perez</td>
                     <td>32554252</td>
                     <td>250000</td>
