--- a/src/app/components/create-empleado/create-empleado.component.html
+++ b/src/app/components/create-empleado/create-empleado.component.html
@@ -3,9 +3,12 @@
         <div class="col-lg-6 offset-lg-3">
             <div class="card text-center">
                 <div class="card-body">
-                    <h3>agregar Empleado</h3>
+                    <h3>{{ titulo }}
+                     <div *ngIf="loading" class="spinner-border float-right" role="status">
+                        <span class="visually-hidden"></span>
+                      </div> </h3>
                     <span *ngIf="submitted && createEmpleado.invalid " class="badge badge-danger">TODOS LOS CAMPOS SON OBLIGATORIOS</span>
-                    <form class="mt-4" [formGroup]="createEmpleado" (ngSubmit)="agregarEmpleado()" >
+                    <form class="mt-4" [formGroup]="createEmpleado" (ngSubmit)="agregarEditarEmpleado()" >
                         <div class="row">
                             <div class="col">
                                 <input type="text" class="form-control form-control-lg" 
