--- a/src/app/components/list-empleados/list-empleados.component.html
+++ b/src/app/components/list-empleados/list-empleados.component.html
@@ -3,10 +3,10 @@
         <div class="card-body">
             <span class="h3">listado de empleados</span>
             <button class="btn btn-dark btn-lg float-right" routerLink="/create-empleado">Agregar</button>
-            <table class="table table-striped table-hover mt-5">
+            <h5 style="margin-top: 30px;" *ngIf="empleado.length == 0">No hay datos para mostrar</h5>
+            <table *ngIf="empleado.length > 0" class="table table-striped table-hover mt-5">            
                 <thead>
                   <tr>
-                    
                     <th>Nombre</th>
                     <th>Apellido</th>
                     <th>Documento</th>
@@ -15,39 +15,16 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr>
-                    <td>pedro</td>
-                    <td>perez</td>
-                    <td>32554252</td>
-                    <td>250000</td>
+                  <tr *ngFor="let empleado of empleado">
+                    <td>hola {{ empleado.Nombre}}</td>
+                    <td>{{ empleado.Apellido }}</td>
+                    <td>{{ empleado.Documento }}</td>
+                    <td>{{ empleado.Salario | currency }}</td>
                     <td>
-                      <i class="fa-solid fa-pen-to-square fa-lg text-info mr-2"></i>
-                      <i class="fa-solid fa-trash fa-lg text-danger"></i>
+                      <i class="fa-solid fa-pen-to-square fa-lg text-info mr-2" [routerLink]="['/editEmpleado/', empleado.id]"></i>
+                      <i (click)="eliminarEmpleado(empleado.id)" class="fa-solid fa-trash fa-lg text-danger"></i>
                     </td>
-                  </tr>
-
-                  <tr>
-                    <td>tomas</td>
-                    <td>gonsales</td>
-                    <td>32554252</td>
-                    <td>250000</td>
-                    <td>
-                      <i class="fa-solid fa-pen-to-square fa-lg text-info mr-2"></i>
-                      <i class="fa-solid fa-trash fa-lg text-danger"></i>
-                    </td>
-                  </tr>
-
-                  <tr>
-                    <td>juaquin</td>
-                    <td>perez</td>
-                    <td>32554252</td>
-                    <td>250000</td>
-                    <td>
-                      <i class="fa-solid fa-pen-to-square fa-lg text-info mr-2"></i>
-                      <i class="fa-solid fa-trash fa-lg text-danger"></i>
-                    </td>
-                  </tr>
-                 
+                  </tr>                                 
                 </tbody>
               </table>
         </div>
